# public-swagger.json
@@ -380,6 +380,55 @@
         }
       }
     },
+    "/greetings/say/:greeting": {
+      "get": {
+        "summary": "/:greeting",
+        "description": "Returns the greeting!",
+        "deprecated": false,
+        "tags": [
+          "/greetings/say"
+        ],
+        "parameters": [
+          {
+            "name": "version",
+            "in": "query",
+            "description": "A version number",
+            "required": true,
+            "schema": {
+              "type": "integer",
+              "example": 1,
+              "format": "int64"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "string"
+                },
+                "example": "Hi!"
+              }
+            }
+          },
+          "default": {
+            "description": "Error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/GeneralError"
+                },
+                "example": {
+                  "errorText": "Error!"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/greetings/say/hi": {
       "get": {
         "summary": "/hi",
